--- a/ZipLoRA.ipynb
+++ b/ZipLoRA.ipynb
@@ -259,70 +259,94 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def compute_ziplora_loss_for_lm(model, content_prompt, style_prompt, lambda_coef=0.01, temperature=2.0):\n",
-    "    # Tokenize inputs\n",
-    "    batch = tokenizer([content_prompt, style_prompt], padding=\"max_length\", truncation=True, max_length=4096, return_tensors='pt')\n",
+    "from typing import Optional, Union\n",
+    "import torch\n",
+    "from torch import nn\n",
+    "import torch.nn.functional as F\n",
     "\n",
-    "    input_ids = batch[\"input_ids\"].to(model.device)\n",
-    "    attention_mask = batch[\"attention_mask\"].to(model.device)\n",
+    "class ZipLoRALinearLayer(nn.Module):\n",
+    "    def __init__(\n",
+    "        self,\n",
+    "        linear_a: nn.Linear,\n",
+    "        linear_b: nn.Linear,\n",
+    "        init_merger_value: Optional[float] = 0.5,\n",
+    "        init_merger_value_2: Optional[float] = 0.5,\n",
+    "        device: Optional[Union[torch.device, str]] = None,\n",
+    "        dtype: Optional[torch.dtype] = None,\n",
+    "    ):\n",
+    "        super().__init__()\n",
     "\n",
-    "    # Split inputs for code and German\n",
-    "    code_input = input_ids[0].to(model.device)\n",
-    "    german_input = input_ids[1].to(model.device)\n",
+    "        assert linear_a.in_features == linear_b.in_features, \"Input features must match\"\n",
+    "        assert linear_a.out_features == linear_b.out_features, \"Output features must match\"\n",
     "\n",
-    "    # Prepare labels (shifted input_ids)\n",
-    "    labels = batch[\"input_ids\"].clone()\n",
-    "    labels[attention_mask == 0] = -100  # Set padding token positions to -100\n",
+    "        self.in_features = linear_a.in_features\n",
+    "        self.out_features = linear_a.out_features\n",
     "\n",
-    "    code_labels = labels[0].to(model.device)\n",
-    "    german_labels = labels[1].to(model.device)\n",
+    "        # Register weights as buffers\n",
+    "        self.register_buffer('weight_1', linear_a.weight.data.clone())\n",
+    "        self.register_buffer('weight_2', linear_b.weight.data.clone())\n",
     "\n",
-    "    with torch.no_grad():\n",
-    "        # Get logits from code model\n",
-    "        for module in model.modules():\n",
-    "            if isinstance(module, ZipLoRALinearLayer):\n",
-    "                module.set_forward_type('weight_1')\n",
-    "        original_code_logits = model(input_ids=code_input.unsqueeze(0), labels=code_labels.unsqueeze(0)).logits\n",
+    "        # Handle biases\n",
+    "        if linear_a.bias is not None and linear_b.bias is not None:\n",
+    "            self.register_buffer('bias1', linear_a.bias.data.clone())\n",
+    "            self.register_buffer('bias2', linear_b.bias.data.clone())\n",
+    "            self.bias_merger1 = nn.Parameter(torch.ones(1, device=device, dtype=dtype) * init_merger_value)\n",
+    "            self.bias_merger2 = nn.Parameter(torch.ones(1, device=device, dtype=dtype) * init_merger_value_2)\n",
+    "        else:\n",
+    "            self.register_buffer('bias1', None)\n",
+    "            self.register_buffer('bias2', None)\n",
+    "            self.register_parameter('bias_merger1', None)\n",
+    "            self.register_parameter('bias_merger2', None)\n",
     "\n",
-    "        # Get logits from German model\n",
-    "        for module in model.modules():\n",
-    "            if isinstance(module, ZipLoRALinearLayer):\n",
-    "                module.set_forward_type('weight_2')\n",
-    "        original_german_logits = model(input_ids=german_input.unsqueeze(0), labels=german_labels.unsqueeze(0)).logits\n",
+    "        # Merger parameters\n",
+    "        self.merger_1 = nn.Parameter(\n",
+    "            torch.ones((self.in_features,), device=device, dtype=dtype) * init_merger_value\n",
+    "        )\n",
+    "        self.merger_2 = nn.Parameter(\n",
+    "            torch.ones((self.in_features,), device=device, dtype=dtype) * init_merger_value_2\n",
+    "        )\n",
+    "        \n",
+    "        self.forward_type = \"merge\"\n",
     "\n",
-    "    # Set model to merged mode\n",
-    "    for module in model.modules():\n",
-    "        if isinstance(module, ZipLoRALinearLayer):\n",
-    "            module.set_forward_type('merge')   \n",
+    "    def set_forward_type(self, type: str = \"merge\"):\n",
+    "        assert type in [\"merge\", \"weight_1\", \"weight_2\"]\n",
+    "        self.forward_type = type\n",
     "\n",
-    "    # Get logits from merged model for both inputs\n",
-    "    merged_code_logits = model(input_ids=code_input.unsqueeze(0), labels=code_labels.unsqueeze(0)).logits\n",
-    "    merged_german_logits = model(input_ids=german_input.unsqueeze(0), labels=german_labels.unsqueeze(0)).logits\n",
+    "    def compute_mergers_similarity(self):\n",
+    "        return (self.merger_1 * self.merger_2).abs().mean()\n",
     "\n",
-    "    # Calculate content loss (KL divergence between merged and original code logits)\n",
-    "    content_loss = F.kl_div(\n",
-    "        F.log_softmax(merged_code_logits / temperature, dim=-1),\n",
-    "        F.softmax(original_code_logits / temperature, dim=-1),\n",
-    "        reduction='batchmean'\n",
-    "    ) * (temperature ** 2) / len(code_input)\n",
+    "    def get_ziplora_weight(self):\n",
+    "        return self.merger_1 * self.weight_1 + self.merger_2 * self.weight_2\n",
     "    \n",
-    "    # Calculate style loss (KL divergence between merged and original German logits)\n",
-    "    style_loss = F.kl_div(\n",
-    "        F.log_softmax(merged_german_logits / temperature, dim=-1),\n",
-    "        F.softmax(original_german_logits / temperature, dim=-1),\n",
-    "        reduction='batchmean'\n",
-    "    ) * (temperature ** 2) / len(german_input)\n",
-    "    \n",
-    "    # Calculate similarity loss to encourage diversity between mergers\n",
-    "    similarity_loss = 0.0\n",
-    "    for module in base_model.modules():\n",
-    "        if isinstance(module, ZipLoRALinearLayer):\n",
-    "            similarity_loss += module.compute_mergers_similarity()\n",
-    "    \n",
-    "    # Combine losses\n",
-    "    total_loss = content_loss + style_loss + lambda_coef * similarity_loss\n",
+    "    def get_ziplora_bias(self):\n",
+    "        if self.bias1 is not None:\n",
+    "            return self.bias_merger1 * self.bias1 + self.bias_merger2 * self.bias2\n",
+    "        return None\n",
     "\n",
-    "    return total_loss"
+    "    def unfreeze(self):\n",
+    "        self.merger_1.requires_grad = True\n",
+    "        self.merger_2.requires_grad = True\n",
+    "        if self.bias_merger1 is not None:\n",
+    "            self.bias_merger1.requires_grad = True\n",
+    "            self.bias_merger2.requires_grad = True\n",
+    "\n",
+    "    def forward(self, hidden_states: torch.Tensor) -> torch.Tensor:\n",
+    "        orig_dtype = hidden_states.dtype\n",
+    "        dtype = self.weight_1.dtype\n",
+    "        if self.forward_type == \"merge\":\n",
+    "            weight = self.get_ziplora_weight()\n",
+    "            bias = self.get_ziplora_bias()\n",
+    "        elif self.forward_type == \"weight_1\":\n",
+    "            weight = self.weight_1\n",
+    "            bias = self.bias1\n",
+    "        elif self.forward_type == \"weight_2\":\n",
+    "            weight = self.weight_2\n",
+    "            bias = self.bias2\n",
+    "        else:\n",
+    "            raise ValueError(self.forward_type)\n",
+    "        \n",
+    "        hidden_states = F.linear(hidden_states.to(dtype), weight=weight, bias=bias)\n",
+    "        return hidden_states.to(orig_dtype)"
    ]
   },
   {
